menu alignment fix/about section add

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ nav {
     background-color: white;
     margin: 0px;
     padding: 0px;
+    justify-content: inherit;
 }
 
 #navLinks a {
@@ -138,7 +139,7 @@ nav {
   flex-wrap: wrap;
 }
 
-.aboutLink, .portfolioLink, .github, .linkedin{
+.aboutLink, .portfolioLink, .github, .linkedin {
   margin: 0px 10px 0px 10px;
   padding: 5px;
 }
